--- a/index.html
+++ b/index.html
@@ -517,13 +517,15 @@
           </div>
           <div class="form-element">
             <label for="comment">Коментар</label>
-            <textarea
-              id="comment"
-              class="form-textarea"
-              placeholder="Введіть текст"
-            ></textarea>
+            <div class="input-textarea-wrap">
+              <textarea
+                id="comment"
+                class="form-textarea"
+                placeholder="Введіть текст"
+              ></textarea>
+            </div>
           </div>
-          <div>
+          <div class="form-checkbox-wrap">
             <label for="accept" class="form-checkbox">
               <input
                 type="checkbox"
@@ -537,8 +539,8 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </div>
-              Погоджуюся з розсилкою та приймаю
-              <span><a href="#" class="link-agree">Умови договору</a></span>
+              Погоджуюся з розсилкою та приймаюㅤ
+              <a href="#" class="link-agree">Умови договору</a>
             </label>
           </div>
           <div class="wrap-btn">
